fix overflow

--- a/views/styles/base.scss
+++ b/views/styles/base.scss
@@ -22,9 +22,9 @@ time, mark, audio, video {
     box-sizing: border-box;
 }
 
-// html{
-//     overflow-x: hidden;
-// }
+html{
+    overflow-x: hidden;
+}
 
 body {
     line-height:1;
